# qq-chat-exporter

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  INSTALL_NAPCAT.md  LICENSE  README.md  README_zh.md  RELEASE_NOTES.md  changes.txt  config.example.yaml  debug_group_api.go  fuck_down_test.py  go.mod  go.sum  history-manager.js  index.html  issues_full.json  main-exporter-pro.js  main.go  mkdocs.yml  package-lock.json  package.json  pr-body.md  qq.py  qq_gundong.py  quick-pack.sh  requirements.txt  rollup.config.js  sitemap.xml  start-standalone.bat  temp.txt  test-plugin-loader.mjs  test-plugin.bat  vercel.json  启动QQ聊天记录导出工具.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  export_issue.yml  feature_request.yml  install_issue.yml  question.yml
.github/workflows/: build-fix.yml  build-installer.yml  build-plugin.yml  build-uninstaller.yml  build-v4.yml  ci.yml  docs.yml  release-plugin.yml  release-v4.yml  release.yml  test-plugin.yml  update-index.yml
NapCatQQ/: .gitignore  package-lock.json  package.json  vite.config.ts
NapCatQQ-4.8.102/napcat.webui/: package.json
NapCatQQ/launcher/: launcher-user.bat  launcher-win10-user.bat  launcher-win10.bat  launcher.bat  loadNapCat.js
NapCatQQ/napcat.webui/: .gitignore  package.json
components/: ChatExporter.js  HistoryManager.js
contributing/: index.html
docker/: Dockerfile  docker-compose.yml  docker-entrypoint-qce.sh
docker-napcat-deployment/: index.html
docker/config/: napcat.json  onebot11.json  plugins.json  webui.json
docker/napcat-stubs/: core-index.js  core-types.js  onebot-msg.js  package.json
docs/: FRAMEWORK_MODE.md  contributing.html  contributing.md  docker-napcat-deployment.html  docker-napcat-deployment.md  docs.css  feedback.md  guide.html  guide.md  index.html  index.md  linux-deploy.html  linux-deploy.md
feedback/: index.html
guide/: index.html
installer/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
installer/src/: App.tsx  index.css  tauri.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: install.rs  lib.rs  main.rs  napcat.rs  qce.rs  service.rs  state.rs  util.rs
internal/cli/: colors.go  errors.go  interactive.go
internal/client/: interface.go  napcat.go  napcat_server.go  websocket_server.go
internal/commands/: config.go  export.go  history.go  root.go  version.go
internal/config/: config.go
internal/database/: database.go
internal/logger/: logger.go
internal/models/: database.go  message.go  request.go
internal/services/: export.go
linux-deploy/: index.html
plugins/qq-chat-exporter/: .gitignore  FINAL_REPORT.md  README.md  index.mjs  package-lock.json  package.json  test-plugin-full.mjs  test-plugin-init-context.mjs  test-plugin.mjs  tsconfig.json
public/: index.html
public/docs/: contributing.html  docker-napcat-deployment.html  docs.css  feedback.html  guide.html  index.html  linux-deploy.html
qce-chunked-viewer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
qce-chunked-viewer/assets/: modern_chunked_app.js  modern_chunked_index.html
qce-chunked-viewer/scripts/: bundle.mjs  gen-sample.mjs  sync-templates.mjs
qce-chunked-viewer/src/: Viewer.tsx  index.css  main.tsx  viewer.css
qce-chunked-viewer/tests/: message-kind.test.mjs  settling.test.mjs  viewer-ui-source.test.mjs
qce-v4-tool/: .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
qce-v4-tool/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
qce-v4-tool/components/: auth-provider.tsx  inter-font-loader.tsx  loading-provider.tsx
qce-v4-tool/e2e/: api-smoke.spec.ts  message-preview-pagination.spec.ts  ui-smoke.spec.ts
qce-v4-tool/hooks/: use-api.ts  (+16 more)
qce-viewer/: .gitignore  README.md  package-lock.json  package.json  scanner.js  server.js  start.bat  start.sh
qq-chat-export-core/: Cargo.toml
qq-chat-export-server/: Cargo.toml
rust-exporter/: Cargo.toml
rust-exporter/assets/: modern_chunked_app.js
rust-exporter/examples/: demo.rs
rust-exporter/src/: base.rs  bloom.rs  chunked_jsonl_writer.rs  error.rs  excel_exporter.rs  html_exporter.rs  json_exporter.rs  json_templates.rs  lib.rs  modern_html_exporter.rs  modern_html_templates.rs  reply_preview_renderer.rs  reply_render.rs  stats.rs  stream_utils.rs  text_exporter.rs  types.rs
rust-server/: Cargo.toml
rust-server/src/: lib.rs  main.rs  scheduled_executor.rs  version.rs
rust-server/src/api/: helpers.rs  middleware.rs  mod.rs  response.rs  state.rs  ws.rs
rust-server/src/api/routes/: albums.rs  files.rs  friends.rs  group_files.rs  groups.rs  messages.rs  mod.rs  resources.rs  scheduled.rs  security.rs  stickers.rs  system.rs  tasks.rs  users.rs
rust-server/src/fetcher/: batch_fetcher.rs  chat_type.rs  mod.rs
rust-server/src/napcat/: client.rs  mod.rs
rust-server/src/parser/: mod.rs  multi_forward_xml.rs  simple_parser.rs
rust-server/src/paths/: mod.rs
rust-server/src/progress/: mod.rs  tracker.rs
rust-server/src/resource/: circuit_breaker.rs  handler.rs  health.rs  mod.rs
rust-server/src/scheduler/: cron.rs  manager.rs  mod.rs
rust-server/src/security/: manager.rs  mod.rs
rust-server/src/storage/: config.rs  database.rs  error.rs  mod.rs
scripts/: build-docs-site.py  build-framework-plugin.py  build-napcat-plugin.py  ensure-esbuild-platforms.mjs  extract-modern-templates.mjs  generate-release-banner.mjs  pack-windows-on-linux.py  pack-zip.py  plugin_runtime.py  qce_json_to_excel.py  quick-pack.py  release-banner-template.html  start-standalone.mjs  sync-version.js
search/: search_index.json
styles/: chat-exporter.css
uninstaller/: index.html  package.json  vite.config.ts
uninstaller/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
uninstaller/src-tauri/capabilities/: default.json
uninstaller/src-tauri/src/: lib.rs  main.rs  uninstall.rs
utils/: datePicker.js  export.js  logger.js  scroll.js
(+383 files in other folders)
