[package]
name = "qce-installer"
version = "6.0.0"
description = "QQ Chat Exporter 自动安装 / 启动器"
authors = ["shuakami <shuakami@sdjz.wiki>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qce_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = "2"
fs2 = "0.4"
sysinfo = "0.32"
dirs = "5"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
futures-util = "0.3"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
