[package]
name = "qce-uninstaller"
version = "6.0.0"
description = "QQ Chat Exporter 卸载工具"
authors = ["shuakami <shuakami@sdjz.wiki>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qce_uninstaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
